AnalizadorLexico/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IGUAL

Grammar

Rule 0     S' -> declaraciones
Rule 1     declaraciones -> declaracion declaraciones
Rule 2     declaraciones -> declaracion
Rule 3     declaracion -> asignacion
Rule 4     declaracion -> funcion
Rule 5     declaracion -> inclusion
Rule 6     declaracion -> retorno
Rule 7     declaracion -> comparacion
Rule 8     inclusion -> RESERVADO RESERVADO
Rule 9     funcion -> RESERVADO RESERVADO PARENTESIS_ABIERTO PARENTESIS_CERRADO bloque
Rule 10    funcion -> RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO PUNTOCOMA
Rule 11    funcion -> RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO bloque
Rule 12    funcion -> RESERVADO bloque
Rule 13    bloque -> LLAVE_ABIERTA declaraciones LLAVE_CERRADA
Rule 14    asignacion -> RESERVADO IDENTIFICADOR ASIGNAR valor PUNTOCOMA
Rule 15    asignacion -> IDENTIFICADOR ASIGNAR valor PUNTOCOMA
Rule 16    comparacion -> IDENTIFICADOR MENOR valor
Rule 17    comparacion -> IDENTIFICADOR MAYOR valor
Rule 18    comparacion -> IDENTIFICADOR MENOR_IGUAL valor
Rule 19    valor -> IDENTIFICADOR
Rule 20    valor -> NUMERO
Rule 21    argumentos -> argumento
Rule 22    argumentos -> argumento COMA argumentos
Rule 23    argumentos -> argumento PUNTOCOMA argumentos
Rule 24    argumento -> STRING
Rule 25    argumento -> referencia
Rule 26    argumento -> IDENTIFICADOR
Rule 27    argumento -> asignacion
Rule 28    argumento -> incremento
Rule 29    argumento -> comparacion
Rule 30    referencia -> AMPERSON IDENTIFICADOR
Rule 31    incremento -> IDENTIFICADOR MASMAS
Rule 32    operacion -> valor MULT valor
Rule 33    operacion -> valor SUMA valor
Rule 34    operacion -> valor RESTA valor
Rule 35    operacion -> valor DIV valor
Rule 36    retorno -> RESERVADO valor PUNTOCOMA

Terminals, with rules where they appear

AMPERSON             : 30
ASIGNAR              : 14 15
COMA                 : 22
DIV                  : 35
IDENTIFICADOR        : 14 15 16 17 18 19 26 30 31
IGUAL                : 
LLAVE_ABIERTA        : 13
LLAVE_CERRADA        : 13
MASMAS               : 31
MAYOR                : 17
MENOR                : 16
MENOR_IGUAL          : 18
MULT                 : 32
NUMERO               : 20
PARENTESIS_ABIERTO   : 9 10 11
PARENTESIS_CERRADO   : 9 10 11
PUNTOCOMA            : 10 14 15 23 36
RESERVADO            : 8 8 9 9 10 11 12 14 36
RESTA                : 34
STRING               : 24
SUMA                 : 33
error                : 

Nonterminals, with rules where they appear

argumento            : 21 22 23
argumentos           : 10 11 22 23
asignacion           : 3 27
bloque               : 9 11 12
comparacion          : 7 29
declaracion          : 1 2
declaraciones        : 1 13 0
funcion              : 4
inclusion            : 5
incremento           : 28
operacion            : 
referencia           : 25
retorno              : 6
valor                : 14 15 16 17 18 32 32 33 33 34 34 35 35 36

Parsing method: LALR

state 0

    (0) S' -> . declaraciones
    (1) declaraciones -> . declaracion declaraciones
    (2) declaraciones -> . declaracion
    (3) declaracion -> . asignacion
    (4) declaracion -> . funcion
    (5) declaracion -> . inclusion
    (6) declaracion -> . retorno
    (7) declaracion -> . comparacion
    (14) asignacion -> . RESERVADO IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (15) asignacion -> . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (9) funcion -> . RESERVADO RESERVADO PARENTESIS_ABIERTO PARENTESIS_CERRADO bloque
    (10) funcion -> . RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO PUNTOCOMA
    (11) funcion -> . RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO bloque
    (12) funcion -> . RESERVADO bloque
    (8) inclusion -> . RESERVADO RESERVADO
    (36) retorno -> . RESERVADO valor PUNTOCOMA
    (16) comparacion -> . IDENTIFICADOR MENOR valor
    (17) comparacion -> . IDENTIFICADOR MAYOR valor
    (18) comparacion -> . IDENTIFICADOR MENOR_IGUAL valor

    RESERVADO       shift and go to state 8
    IDENTIFICADOR   shift and go to state 9

    declaraciones                  shift and go to state 1
    declaracion                    shift and go to state 2
    asignacion                     shift and go to state 3
    funcion                        shift and go to state 4
    inclusion                      shift and go to state 5
    retorno                        shift and go to state 6
    comparacion                    shift and go to state 7

state 1

    (0) S' -> declaraciones .



state 2

    (1) declaraciones -> declaracion . declaraciones
    (2) declaraciones -> declaracion .
    (1) declaraciones -> . declaracion declaraciones
    (2) declaraciones -> . declaracion
    (3) declaracion -> . asignacion
    (4) declaracion -> . funcion
    (5) declaracion -> . inclusion
    (6) declaracion -> . retorno
    (7) declaracion -> . comparacion
    (14) asignacion -> . RESERVADO IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (15) asignacion -> . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (9) funcion -> . RESERVADO RESERVADO PARENTESIS_ABIERTO PARENTESIS_CERRADO bloque
    (10) funcion -> . RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO PUNTOCOMA
    (11) funcion -> . RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO bloque
    (12) funcion -> . RESERVADO bloque
    (8) inclusion -> . RESERVADO RESERVADO
    (36) retorno -> . RESERVADO valor PUNTOCOMA
    (16) comparacion -> . IDENTIFICADOR MENOR valor
    (17) comparacion -> . IDENTIFICADOR MAYOR valor
    (18) comparacion -> . IDENTIFICADOR MENOR_IGUAL valor

    $end            reduce using rule 2 (declaraciones -> declaracion .)
    LLAVE_CERRADA   reduce using rule 2 (declaraciones -> declaracion .)
    RESERVADO       shift and go to state 8
    IDENTIFICADOR   shift and go to state 9

    declaracion                    shift and go to state 2
    declaraciones                  shift and go to state 10
    asignacion                     shift and go to state 3
    funcion                        shift and go to state 4
    inclusion                      shift and go to state 5
    retorno                        shift and go to state 6
    comparacion                    shift and go to state 7

state 3

    (3) declaracion -> asignacion .

    RESERVADO       reduce using rule 3 (declaracion -> asignacion .)
    IDENTIFICADOR   reduce using rule 3 (declaracion -> asignacion .)
    $end            reduce using rule 3 (declaracion -> asignacion .)
    LLAVE_CERRADA   reduce using rule 3 (declaracion -> asignacion .)


state 4

    (4) declaracion -> funcion .

    RESERVADO       reduce using rule 4 (declaracion -> funcion .)
    IDENTIFICADOR   reduce using rule 4 (declaracion -> funcion .)
    $end            reduce using rule 4 (declaracion -> funcion .)
    LLAVE_CERRADA   reduce using rule 4 (declaracion -> funcion .)


state 5

    (5) declaracion -> inclusion .

    RESERVADO       reduce using rule 5 (declaracion -> inclusion .)
    IDENTIFICADOR   reduce using rule 5 (declaracion -> inclusion .)
    $end            reduce using rule 5 (declaracion -> inclusion .)
    LLAVE_CERRADA   reduce using rule 5 (declaracion -> inclusion .)


state 6

    (6) declaracion -> retorno .

    RESERVADO       reduce using rule 6 (declaracion -> retorno .)
    IDENTIFICADOR   reduce using rule 6 (declaracion -> retorno .)
    $end            reduce using rule 6 (declaracion -> retorno .)
    LLAVE_CERRADA   reduce using rule 6 (declaracion -> retorno .)


state 7

    (7) declaracion -> comparacion .

    RESERVADO       reduce using rule 7 (declaracion -> comparacion .)
    IDENTIFICADOR   reduce using rule 7 (declaracion -> comparacion .)
    $end            reduce using rule 7 (declaracion -> comparacion .)
    LLAVE_CERRADA   reduce using rule 7 (declaracion -> comparacion .)


state 8

    (14) asignacion -> RESERVADO . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (9) funcion -> RESERVADO . RESERVADO PARENTESIS_ABIERTO PARENTESIS_CERRADO bloque
    (10) funcion -> RESERVADO . PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO PUNTOCOMA
    (11) funcion -> RESERVADO . PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO bloque
    (12) funcion -> RESERVADO . bloque
    (8) inclusion -> RESERVADO . RESERVADO
    (36) retorno -> RESERVADO . valor PUNTOCOMA
    (13) bloque -> . LLAVE_ABIERTA declaraciones LLAVE_CERRADA
    (19) valor -> . IDENTIFICADOR
    (20) valor -> . NUMERO

    IDENTIFICADOR   shift and go to state 12
    RESERVADO       shift and go to state 11
    PARENTESIS_ABIERTO shift and go to state 14
    LLAVE_ABIERTA   shift and go to state 16
    NUMERO          shift and go to state 17

    valor                          shift and go to state 13
    bloque                         shift and go to state 15

state 9

    (15) asignacion -> IDENTIFICADOR . ASIGNAR valor PUNTOCOMA
    (16) comparacion -> IDENTIFICADOR . MENOR valor
    (17) comparacion -> IDENTIFICADOR . MAYOR valor
    (18) comparacion -> IDENTIFICADOR . MENOR_IGUAL valor

    ASIGNAR         shift and go to state 18
    MENOR           shift and go to state 19
    MAYOR           shift and go to state 20
    MENOR_IGUAL     shift and go to state 21


state 10

    (1) declaraciones -> declaracion declaraciones .

    $end            reduce using rule 1 (declaraciones -> declaracion declaraciones .)
    LLAVE_CERRADA   reduce using rule 1 (declaraciones -> declaracion declaraciones .)


state 11

    (9) funcion -> RESERVADO RESERVADO . PARENTESIS_ABIERTO PARENTESIS_CERRADO bloque
    (8) inclusion -> RESERVADO RESERVADO .

    PARENTESIS_ABIERTO shift and go to state 22
    RESERVADO       reduce using rule 8 (inclusion -> RESERVADO RESERVADO .)
    IDENTIFICADOR   reduce using rule 8 (inclusion -> RESERVADO RESERVADO .)
    $end            reduce using rule 8 (inclusion -> RESERVADO RESERVADO .)
    LLAVE_CERRADA   reduce using rule 8 (inclusion -> RESERVADO RESERVADO .)


state 12

    (14) asignacion -> RESERVADO IDENTIFICADOR . ASIGNAR valor PUNTOCOMA
    (19) valor -> IDENTIFICADOR .

    ASIGNAR         shift and go to state 23
    PUNTOCOMA       reduce using rule 19 (valor -> IDENTIFICADOR .)


state 13

    (36) retorno -> RESERVADO valor . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24


state 14

    (10) funcion -> RESERVADO PARENTESIS_ABIERTO . argumentos PARENTESIS_CERRADO PUNTOCOMA
    (11) funcion -> RESERVADO PARENTESIS_ABIERTO . argumentos PARENTESIS_CERRADO bloque
    (21) argumentos -> . argumento
    (22) argumentos -> . argumento COMA argumentos
    (23) argumentos -> . argumento PUNTOCOMA argumentos
    (24) argumento -> . STRING
    (25) argumento -> . referencia
    (26) argumento -> . IDENTIFICADOR
    (27) argumento -> . asignacion
    (28) argumento -> . incremento
    (29) argumento -> . comparacion
    (30) referencia -> . AMPERSON IDENTIFICADOR
    (14) asignacion -> . RESERVADO IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (15) asignacion -> . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (31) incremento -> . IDENTIFICADOR MASMAS
    (16) comparacion -> . IDENTIFICADOR MENOR valor
    (17) comparacion -> . IDENTIFICADOR MAYOR valor
    (18) comparacion -> . IDENTIFICADOR MENOR_IGUAL valor

    STRING          shift and go to state 28
    IDENTIFICADOR   shift and go to state 30
    AMPERSON        shift and go to state 34
    RESERVADO       shift and go to state 25

    argumentos                     shift and go to state 26
    argumento                      shift and go to state 27
    referencia                     shift and go to state 29
    asignacion                     shift and go to state 31
    incremento                     shift and go to state 32
    comparacion                    shift and go to state 33

state 15

    (12) funcion -> RESERVADO bloque .

    RESERVADO       reduce using rule 12 (funcion -> RESERVADO bloque .)
    IDENTIFICADOR   reduce using rule 12 (funcion -> RESERVADO bloque .)
    $end            reduce using rule 12 (funcion -> RESERVADO bloque .)
    LLAVE_CERRADA   reduce using rule 12 (funcion -> RESERVADO bloque .)


state 16

    (13) bloque -> LLAVE_ABIERTA . declaraciones LLAVE_CERRADA
    (1) declaraciones -> . declaracion declaraciones
    (2) declaraciones -> . declaracion
    (3) declaracion -> . asignacion
    (4) declaracion -> . funcion
    (5) declaracion -> . inclusion
    (6) declaracion -> . retorno
    (7) declaracion -> . comparacion
    (14) asignacion -> . RESERVADO IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (15) asignacion -> . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (9) funcion -> . RESERVADO RESERVADO PARENTESIS_ABIERTO PARENTESIS_CERRADO bloque
    (10) funcion -> . RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO PUNTOCOMA
    (11) funcion -> . RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO bloque
    (12) funcion -> . RESERVADO bloque
    (8) inclusion -> . RESERVADO RESERVADO
    (36) retorno -> . RESERVADO valor PUNTOCOMA
    (16) comparacion -> . IDENTIFICADOR MENOR valor
    (17) comparacion -> . IDENTIFICADOR MAYOR valor
    (18) comparacion -> . IDENTIFICADOR MENOR_IGUAL valor

    RESERVADO       shift and go to state 8
    IDENTIFICADOR   shift and go to state 9

    declaraciones                  shift and go to state 35
    declaracion                    shift and go to state 2
    asignacion                     shift and go to state 3
    funcion                        shift and go to state 4
    inclusion                      shift and go to state 5
    retorno                        shift and go to state 6
    comparacion                    shift and go to state 7

state 17

    (20) valor -> NUMERO .

    PUNTOCOMA       reduce using rule 20 (valor -> NUMERO .)
    RESERVADO       reduce using rule 20 (valor -> NUMERO .)
    IDENTIFICADOR   reduce using rule 20 (valor -> NUMERO .)
    $end            reduce using rule 20 (valor -> NUMERO .)
    LLAVE_CERRADA   reduce using rule 20 (valor -> NUMERO .)
    COMA            reduce using rule 20 (valor -> NUMERO .)
    PARENTESIS_CERRADO reduce using rule 20 (valor -> NUMERO .)


state 18

    (15) asignacion -> IDENTIFICADOR ASIGNAR . valor PUNTOCOMA
    (19) valor -> . IDENTIFICADOR
    (20) valor -> . NUMERO

    IDENTIFICADOR   shift and go to state 36
    NUMERO          shift and go to state 17

    valor                          shift and go to state 37

state 19

    (16) comparacion -> IDENTIFICADOR MENOR . valor
    (19) valor -> . IDENTIFICADOR
    (20) valor -> . NUMERO

    IDENTIFICADOR   shift and go to state 36
    NUMERO          shift and go to state 17

    valor                          shift and go to state 38

state 20

    (17) comparacion -> IDENTIFICADOR MAYOR . valor
    (19) valor -> . IDENTIFICADOR
    (20) valor -> . NUMERO

    IDENTIFICADOR   shift and go to state 36
    NUMERO          shift and go to state 17

    valor                          shift and go to state 39

state 21

    (18) comparacion -> IDENTIFICADOR MENOR_IGUAL . valor
    (19) valor -> . IDENTIFICADOR
    (20) valor -> . NUMERO

    IDENTIFICADOR   shift and go to state 36
    NUMERO          shift and go to state 17

    valor                          shift and go to state 40

state 22

    (9) funcion -> RESERVADO RESERVADO PARENTESIS_ABIERTO . PARENTESIS_CERRADO bloque

    PARENTESIS_CERRADO shift and go to state 41


state 23

    (14) asignacion -> RESERVADO IDENTIFICADOR ASIGNAR . valor PUNTOCOMA
    (19) valor -> . IDENTIFICADOR
    (20) valor -> . NUMERO

    IDENTIFICADOR   shift and go to state 36
    NUMERO          shift and go to state 17

    valor                          shift and go to state 42

state 24

    (36) retorno -> RESERVADO valor PUNTOCOMA .

    RESERVADO       reduce using rule 36 (retorno -> RESERVADO valor PUNTOCOMA .)
    IDENTIFICADOR   reduce using rule 36 (retorno -> RESERVADO valor PUNTOCOMA .)
    $end            reduce using rule 36 (retorno -> RESERVADO valor PUNTOCOMA .)
    LLAVE_CERRADA   reduce using rule 36 (retorno -> RESERVADO valor PUNTOCOMA .)


state 25

    (14) asignacion -> RESERVADO . IDENTIFICADOR ASIGNAR valor PUNTOCOMA

    IDENTIFICADOR   shift and go to state 43


state 26

    (10) funcion -> RESERVADO PARENTESIS_ABIERTO argumentos . PARENTESIS_CERRADO PUNTOCOMA
    (11) funcion -> RESERVADO PARENTESIS_ABIERTO argumentos . PARENTESIS_CERRADO bloque

    PARENTESIS_CERRADO shift and go to state 44


state 27

    (21) argumentos -> argumento .
    (22) argumentos -> argumento . COMA argumentos
    (23) argumentos -> argumento . PUNTOCOMA argumentos

    PARENTESIS_CERRADO reduce using rule 21 (argumentos -> argumento .)
    COMA            shift and go to state 45
    PUNTOCOMA       shift and go to state 46


state 28

    (24) argumento -> STRING .

    COMA            reduce using rule 24 (argumento -> STRING .)
    PUNTOCOMA       reduce using rule 24 (argumento -> STRING .)
    PARENTESIS_CERRADO reduce using rule 24 (argumento -> STRING .)


state 29

    (25) argumento -> referencia .

    COMA            reduce using rule 25 (argumento -> referencia .)
    PUNTOCOMA       reduce using rule 25 (argumento -> referencia .)
    PARENTESIS_CERRADO reduce using rule 25 (argumento -> referencia .)


state 30

    (26) argumento -> IDENTIFICADOR .
    (15) asignacion -> IDENTIFICADOR . ASIGNAR valor PUNTOCOMA
    (31) incremento -> IDENTIFICADOR . MASMAS
    (16) comparacion -> IDENTIFICADOR . MENOR valor
    (17) comparacion -> IDENTIFICADOR . MAYOR valor
    (18) comparacion -> IDENTIFICADOR . MENOR_IGUAL valor

    COMA            reduce using rule 26 (argumento -> IDENTIFICADOR .)
    PUNTOCOMA       reduce using rule 26 (argumento -> IDENTIFICADOR .)
    PARENTESIS_CERRADO reduce using rule 26 (argumento -> IDENTIFICADOR .)
    ASIGNAR         shift and go to state 18
    MASMAS          shift and go to state 47
    MENOR           shift and go to state 19
    MAYOR           shift and go to state 20
    MENOR_IGUAL     shift and go to state 21


state 31

    (27) argumento -> asignacion .

    COMA            reduce using rule 27 (argumento -> asignacion .)
    PUNTOCOMA       reduce using rule 27 (argumento -> asignacion .)
    PARENTESIS_CERRADO reduce using rule 27 (argumento -> asignacion .)


state 32

    (28) argumento -> incremento .

    COMA            reduce using rule 28 (argumento -> incremento .)
    PUNTOCOMA       reduce using rule 28 (argumento -> incremento .)
    PARENTESIS_CERRADO reduce using rule 28 (argumento -> incremento .)


state 33

    (29) argumento -> comparacion .

    COMA            reduce using rule 29 (argumento -> comparacion .)
    PUNTOCOMA       reduce using rule 29 (argumento -> comparacion .)
    PARENTESIS_CERRADO reduce using rule 29 (argumento -> comparacion .)


state 34

    (30) referencia -> AMPERSON . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 48


state 35

    (13) bloque -> LLAVE_ABIERTA declaraciones . LLAVE_CERRADA

    LLAVE_CERRADA   shift and go to state 49


state 36

    (19) valor -> IDENTIFICADOR .

    PUNTOCOMA       reduce using rule 19 (valor -> IDENTIFICADOR .)
    RESERVADO       reduce using rule 19 (valor -> IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 19 (valor -> IDENTIFICADOR .)
    $end            reduce using rule 19 (valor -> IDENTIFICADOR .)
    LLAVE_CERRADA   reduce using rule 19 (valor -> IDENTIFICADOR .)
    COMA            reduce using rule 19 (valor -> IDENTIFICADOR .)
    PARENTESIS_CERRADO reduce using rule 19 (valor -> IDENTIFICADOR .)


state 37

    (15) asignacion -> IDENTIFICADOR ASIGNAR valor . PUNTOCOMA

    PUNTOCOMA       shift and go to state 50


state 38

    (16) comparacion -> IDENTIFICADOR MENOR valor .

    RESERVADO       reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)
    IDENTIFICADOR   reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)
    $end            reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)
    LLAVE_CERRADA   reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)
    COMA            reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)
    PUNTOCOMA       reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)
    PARENTESIS_CERRADO reduce using rule 16 (comparacion -> IDENTIFICADOR MENOR valor .)


state 39

    (17) comparacion -> IDENTIFICADOR MAYOR valor .

    RESERVADO       reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)
    IDENTIFICADOR   reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)
    $end            reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)
    LLAVE_CERRADA   reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)
    COMA            reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)
    PUNTOCOMA       reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)
    PARENTESIS_CERRADO reduce using rule 17 (comparacion -> IDENTIFICADOR MAYOR valor .)


state 40

    (18) comparacion -> IDENTIFICADOR MENOR_IGUAL valor .

    RESERVADO       reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)
    IDENTIFICADOR   reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)
    $end            reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)
    LLAVE_CERRADA   reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)
    COMA            reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)
    PUNTOCOMA       reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)
    PARENTESIS_CERRADO reduce using rule 18 (comparacion -> IDENTIFICADOR MENOR_IGUAL valor .)


state 41

    (9) funcion -> RESERVADO RESERVADO PARENTESIS_ABIERTO PARENTESIS_CERRADO . bloque
    (13) bloque -> . LLAVE_ABIERTA declaraciones LLAVE_CERRADA

    LLAVE_ABIERTA   shift and go to state 16

    bloque                         shift and go to state 51

state 42

    (14) asignacion -> RESERVADO IDENTIFICADOR ASIGNAR valor . PUNTOCOMA

    PUNTOCOMA       shift and go to state 52


state 43

    (14) asignacion -> RESERVADO IDENTIFICADOR . ASIGNAR valor PUNTOCOMA

    ASIGNAR         shift and go to state 23


state 44

    (10) funcion -> RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO . PUNTOCOMA
    (11) funcion -> RESERVADO PARENTESIS_ABIERTO argumentos PARENTESIS_CERRADO . bloque
    (13) bloque -> . LLAVE_ABIERTA declaraciones LLAVE_CERRADA

    PUNTOCOMA       shift and go to state 53
    LLAVE_ABIERTA   shift and go to state 16

    bloque                         shift and go to state 54

state 45
